[package]
name = "pdok-apis"
version = "0.1.7"
authors = ["Folkert <folkert@tweedegolf.com>", "Erik <erik@tweedegolf.com>", "Marlon Peeters <marlonpeeters@tweedegolf.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

reqwest = { version = "0.11.4", features = ["json", "stream"] }
url = { version = "2.1", features = ["serde"] }

geo = { version = "0.23.1", features = ["use-serde"] }
geojson = { version = "0.22.2", features = ["geo-types"] }
rijksdriehoek = "0.1.0"

[dev-dependencies]
tokio-test = "*"
