[package]
name = "pdok-apis"
version = "0.3.0"
authors = ["Folkert <folkert@tweedegolf.com>", "Erik <erik@tweedegolf.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

reqwest = { version = "0.12", features = ["json", "stream"] }
url = { version = "2.1", features = ["serde"] }

geo = { version = "0.29", features = ["use-serde"] }
geojson = { version = "0.24", features = ["geo-types"] }
rijksdriehoek = "0.1.0"

[dev-dependencies]
tokio-test = "*"
